# briscola-py-rl

./: .gitignore  README.md  export_to_onnx.ipynb  hello.py  play_1v1.py  ppo.ipynb  pyproject.toml  testing.ipynb  train_and_eval.ipynb
briscola_env/: briscola_env.py
lib/: action_mask_wrapper.py  mlflow_logging.py  onnxable.py
lib/briscola/: briscola.py  game.py
lib/briscola_env/: briscola_env.py  embedding.py
models/: briscola_4p_1M_20250501-181557-probdist.onnx  briscola_4p_1M_20250501-181557.onnx
notebooks/: train_and_eval.ipynb
tests/: embedding_test.py  game_test.py
