[project]
name = "briscola-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "onnx>=1.17.0",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
    "rlcard>=1.2.0",
    "stable-baselines3>=2.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
